<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="textPersonName"
        android:hint="@string/pass" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/ip" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/port" />

    <EditText
        android:id="@+id/name_gprs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/name_gprs" />

    <EditText
        android:id="@+id/pass_gprs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/pass_gprs" />

    <EditText
        android:id="@+id/apn_gprs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/apn_gprs" />

    <EditText
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/mode" />

    <EditText
        android:id="@+id/res_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/res_ip" />

    <EditText
        android:id="@+id/res_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/res_port" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/phone" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/send"/>
</LinearLayout>